--- a/src/main/webapp/WEB-INF/views/index.html
+++ b/src/main/webapp/WEB-INF/views/index.html
@@ -23,7 +23,7 @@
   <link href="css/icheck/flat/green.css" rel="stylesheet" />
   <link href="css/floatexamples.css" rel="stylesheet" type="text/css" />
 
-  <script src="js/jquery.min.js"></script>
+  <script src="js/jslib/jquery.min.js"></script>
   <script src="js/nprogress.js"></script>
 
   <!--[if lt IE 9]>
