--- a/src/main/webapp/WEB-INF/views/login.html
+++ b/src/main/webapp/WEB-INF/views/login.html
@@ -100,7 +100,7 @@
           }
           $.ajax({
               type : "POST",
-              url : "loginForm.html?t=" + new Date().getMilliseconds(),
+              url : "loginForm?t=" + new Date().getMilliseconds(),
               async:false,
               data:{
             	  username:$.trim(userName),
